<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomeFragment">

    <ImageView
        android:id="@+id/homeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/home_splash_description"
        app:layout_constraintBottom_toTopOf="@+id/homeTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_splash" />

    <TextView
        android:id="@+id/homeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/home_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/homeDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/homeDescription"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/home_description"
        android:textSize="16sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/goToListButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/goToListButton"

        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_background"

        android:text="@string/home_go_to_lists_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- <a href="https://www.freepik.com/free-vector/media-content-management-vlogging-activities-product-videos-sharing-online-marketing-advertising-tool-female-vlogger-streaming-live_10782784.htm#query=video&position=24&from_view=search&track=sph">Image by vectorjuice</a> on Freepik -->

</androidx.constraintlayout.widget.ConstraintLayout>