<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/soft_white"
    android:padding="10dp">

    <ImageView
        android:id="@+id/itemTempImage"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/default_image"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <Button
        android:id="@+id/selectImageFromGalleryButton"

        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:background="@drawable/button_background"

        android:text="@string/add_image_from_gallery_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/selectImageFromCameraButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:background="@drawable/button_background"
        android:text="@string/add_image_from_camera_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectImageFromGalleryButton" />

    <Button
        android:id="@+id/uploadImageButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:background="@drawable/button_background"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:background="@drawable/button_background"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="170dp"
        android:layout_height="220dp"
        android:layout_marginTop="16dp"
        android:elevation="5dp"
        android:src="@drawable/image_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/imagePlaceholderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_placeholder_text"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />
</androidx.constraintlayout.widget.ConstraintLayout>